modify combinations